--- a/bin/db.properties
+++ b/bin/db.properties
@@ -1,6 +1,11 @@
 #jdbc连接oracle配置
-oracle.driver=oracle.jdbc.driver.OracleDriver
-oracle.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-oracle.username=oracle
-oracle.password=oracle
+#oracle.driver=oracle.jdbc.driver.OracleDriver
+#oracle.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
+#oracle.username=oracle
+#oracle.password=oracle
 
+#jdbc连接mysql配置
+mysql.driver=com.mysql.cj.jdbc.Driver
+mysql.url=jdbc:mysql://127.0.0.1:3306/hornet?useSSL=false
+mysql.username=root
+mysql.password=root123456
