--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.9.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/ojdbc6-11.2.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.9-rc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
